[package]
name = "tiempodb"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
crossbeam="0.8"
crc32fast = "1.3.0"
zstd = "0.9.0"
log = "0.4.14"
fake = {version = "2.4", features = ['derive']}
rand = "0.8"

[dev-dependencies]
claim = "0.5"

