[package]
name = "tiempodb"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[features]
no_fuzz = []
default = ["no_fuzz"]

[[test]]
name = "failpoints"
path = "tests/failpoints/mod.rs"
required-features = ["fail/failpoints"]

[dependencies]
crossbeam="0.8.1"
crc32fast = "1.3.0"
zstd = "0.9.0"
log = "0.4.14"
fake = {version = "2.4", features = ['derive']}
rand = "0.8"
streaming-iterator = "0.1.5"
serde = { version = "1.0.130", features = ["derive"] }
serde_json = "1.0.72"
fail = "0.5" 
parking_lot="0.11.1"

[dev-dependencies]
claim = "0.5"
fuzzcheck = "0.10.1"
tempfile = "3.3.0"
