[package]
name = "tiempodb"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[features]
no_fuzz = []
default = ["no_fuzz"]

[[test]]
name = "failpoints"
path = "tests/failpoints/mod.rs"
required-features = ["fail/failpoints"]

[build-dependencies]
lalrpop = {version="0.19.7", features = ["lexer"]}

[dependencies]
crc32fast = "1.3.0"
crossbeam="0.8.1"
fail = "0.5" 
fake = {version = "2.4", features = ['derive']}
lalrpop-util = {version = "0.19.7", features = ["lexer"]}
log = "0.4.14"
parking_lot="0.11.1"
rand = "0.8"
serde = { version = "1.0.130", features = ["derive"] }
serde_json = "1.0.72"
zstd = "0.9.0"
streaming-iterator = "0.1.5"
hyper = { version="0.14", features=["server","http1","tcp","stream"] }
tokio={ version="1", features=["full"]}
futures = { version="0.3"}
url = { version="2"}
anyhow="1.0.53"
futures-util="0.3.19"

[dev-dependencies]
claim = "0.5"
fuzzcheck = "0.10.1"
tempfile = "3.3.0"
criterion = "0.3.5"
tokio-test="0.4.2"

[[bench]]
name = "my_benchmark"
harness = false

